termine el index

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <nav>
             <img src="./assets/images/logo.jpg" class="logo">
             <ul>
-                <a href="./index.html">inicio</a>
-                <a href="./pages/contacto.html">contacto</a>
-                <a href="./pages/personajes.html">personajes</a>
-                <a href="./pages/historia.html">historia</a>
-                <a href="./pages/pelicula.html">pelicula</a>
+                <a href="./index.html">inicio</a class="nav">
+                <a href="./pages/contacto.html">contacto</a class="nav">
+                <a href="./pages/personajes.html">personajes</a class="nav">
+                <a href="./pages/historia.html">historia</a class="nav">
+                <a href="./pages/pelicula.html">pelicula</a class="nav">
             </ul>
         </nav>
     </header>   
@@ -50,7 +50,5 @@
             <li>facebook</li>
         </ul>
     </footer>
-
-
 </body>
 </html>
