--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <nav>
-            <img src="../assets/images/logo.jpg">
+            <div>
+                <img src="../assets/images/logo.jpg">
+            </div>
             <ul>
                 <a href="../index.html">inicio</a>
                 <a href="./contacto.html">contacto</a>
