--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Kuroko no basuke</title>
 </head>
-<body>
-    <header>
+<body id="bodycontacto">
+    <header id="headercontacto">
         <nav>
-            <img src="../assets/images/logo.jpg">
+            <img src="../assets/images/logo.jpg" class="logo">
             <ul>
                 <a href="../index.html">inicio</a>
                 <a href="./contacto.html">contacto</a>
@@ -20,12 +20,12 @@
             </ul>
         </nav>
     </header>
-    <main>   
-        <h1>FAN PAGE DE KUROKO NO BASKET</h1>
+    <main id="maincontacto">   
+        <h1>FAN PAGE DE KUROKO NO BASKET</h1 class="titulocontacto">
         <section>
-            <h2>Escribenos, somos una pagina que se encuentra en constante mejora continua, ¡por lo que consideramos de suma importancia sus opiniones y criticas constructivas!</h2>
+            <h2 class="parrafocontacto">Escribenos, somos una pagina que se encuentra en constante mejora continua, ¡por lo que consideramos de suma importancia sus opiniones y criticas constructivas!</h2>
             <br>
-            <form method="" action="post" enctype="text/plain">
+            <form method="" action="post" enctype="text/plain" class="formulariocontacto">
             <fieldset>
                 <legend>
                 Contactanos!
@@ -58,8 +58,9 @@
                 <a href="https://animeflv.video/home/" target="_blank">ven y conoce mas historias fantasicas,dejate atrapar por el mundo del anime</a>
             </article>
         </aside>
+    </main>
     <br> 
-    <footer>
+    <footer id="footercontacto">
         <ul>
             <li>ver el anime</li>
             <li>discord</li>
