--- a/pages/pelicula.html
+++ b/pages/pelicula.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="../assets/images/logo.jpg">
+            <img src="../assets/images/logo.jpg" class="logo">
             <ul>
                 <a href="../index.html">inicio</a>
                 <a href="./contacto.html">contacto</a>
