--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,10 +22,10 @@
     </header>
     <main id="maincontacto">   
         <h1>FAN PAGE DE KUROKO NO BASKET</h1 class="titulocontacto">
-        <section>
-            <h2 class="parrafocontacto">Escribenos, somos una pagina que se encuentra en constante mejora continua, ¡por lo que consideramos de suma importancia sus opiniones y criticas constructivas!</h2>
-            <br>
-            <form method="" action="post" enctype="text/plain" class="formulariocontacto">
+        <section id="sectionc">   
+            <h2 >Escribenos, somos una pagina que se encuentra en constante mejora continua, ¡por lo que consideramos de suma importancia sus opiniones y criticas constructivas!</h2>
+        <br>
+            <form method="" action="post" enctype="text/plain" >
             <fieldset>
                 <legend>
                 Contactanos!
@@ -48,8 +48,8 @@
             </fieldset>       
             </form>
         </section>
-        <aside>
-            <article>
+        <aside class="asidecontacto">
+            <article">
                 <h3>¡Mira el anime ahora!</h3>
                 <p>¡Haz <a href="https://animeflv.video/movie/kuroko-no-basket-ng-shu-c9hoh8jj/" target="_blank">click aqui</a> para ver el anime y comenzar la aventura acompañado de kuroko y sus amigos!</p>
             </article>
