--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
+<body id="bodypersonajes">
+    <header id="headerpersonajes">
         <nav>
             <div>
                 <img src="../assets/images/logo.jpg" class="logo">
@@ -22,10 +22,10 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>FAN PAGE DE KUROKO NO BASKET</h1>
-        <section>
-            <h2>¡Conoce algunos datos sobre los personajes iconicos de este grandioso anime!</h2>
+    <main id="mainpersonajes">
+        <h1 id="titulopersonajes">FAN PAGE DE KUROKO NO BASKET</h1>
+        <section id="sectionpersonajes">
+            <h2 id="subtitulopersonajes">¡Conoce algunos datos sobre los personajes iconicos de este grandioso anime!</h2>
             <article id="articulopersonaje">
                 <img src="../assets/images/kise.jpg" alt="kise ryota" id="personaje">
                 <h3>Kise Ryota</h3>
@@ -87,7 +87,7 @@
                 </p>
             </article>
         </section>
-        <aside>
+        <aside id="asidepersonajes">
             <article>
                 <h3>¡Mira el anime ahora!</h3>
                 <p>¡Haz <a href="https://animeflv.video/movie/kuroko-no-basket-ng-shu-c9hoh8jj/" target="_blank">click aqui</a> para ver el anime y comenzar la aventura acompañado de kuroko y sus amigos!</p>
@@ -98,7 +98,7 @@
             </article>
         </aside>
     </main>
-    <footer>
+    <footer id="footerpersonajes">
         <ul>
             <li>ver el anime</li>
             <li>discord</li>
