--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
+<body id="bodyhistoria">
+    <header id="headerhistoria">
         <nav>
             <img src="../assets/images/logo.jpg" class="logo">
             <ul>
@@ -20,16 +20,16 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>FAN PAGE DE KUROKO NO BASKET</h1>
-        <h2>Sumergete en un sin fin de aventuras con este grandioso anime, ¡acompaña a kuroko en su desafio contra la generación de los milagros!</h2>
-        <section>
+    <main id="mainhistoria">
+        <h1 id="titulohistoria">FAN PAGE DE KUROKO NO BASKET</h1>
+        <h2 id="subtitulohistoria">Sumergete en un sin fin de aventuras con este grandioso anime, ¡acompaña a kuroko en su desafio contra la generación de los milagros!</h2>
+        <section id="sinopsishistoria">
             <article>
                 <h3>Sinopsis</h3>
                 <p>Kuroko no Basquet (Kuroko no Basuke), es la historia realizada en Manga que trata sobre un joven equipo de básquetball de adolescentes, que están en un colegio de secundaria y que luchan por ir a un campeonato de Interescuelas.Al principio hay un equipo que juega basquetball en la escuela Teiko Junior School, el cual es muy bueno en derrotar a sus contrincantes. Hay cinco jóvenes a los que les llaman la “Generación Milagrosa”. Al finalizar la escuela cada uno de ellos fue enviado a diferentes escuelas de secundaria.Kuroko Tetsuya era el último jugador de ese equipo, el número 6, la reserva del equipo el que nadie notaba, el cual es enviado a estudiar en la Escuela de Seirin High, en esta escuela conoce a su nuevo amigo Kagami Taiga, quien también sabe jugar, y estuvo un tiempo en Estados Unidos. Por casualidades del destino, la escuela de Koruko deberá enfrentarse a las escuelas donde están sus ex-compañeros en un campeonato entre escuelas de secundaria.</p>
             </article>
         </section>
-        <section>
+        <section id="sectionhistoria">
             <h3>momentos memorables</h3>
             <article class="momentos">
                 <h3 class="momentos__titulo">aomine vs kagami</h3>
@@ -48,7 +48,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/C_Ob75G-2B8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="momentos__video"></iframe>
             </article>
         </section>
-        <aside>
+        <aside id="asidehistoria">
             <article>
                 <h3>¡Mira el anime ahora!</h3>
                 <p>¡Haz <a href="https://animeflv.video/movie/kuroko-no-basket-ng-shu-c9hoh8jj/" target="_blank">click aqui</a> para ver el anime y comenzar la aventura acompañado de kuroko y sus amigos!</p>
@@ -59,7 +59,7 @@
             </article>
         </aside>
     </main>  
-    <footer>
+    <footer id="footerhistoria">
         <ul>
             <li>ver el anime</li>
             <li>discord</li>
