--- a/pages/pelicula.html
+++ b/pages/pelicula.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
+<body id="bodypelicula">
+    <header id="headerpelicula">
         <nav>
             <img src="../assets/images/logo.jpg" class="logo">
             <ul>
@@ -20,9 +20,9 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>FAN PAGE DE KUROKO NO BASKET</h1>
-        <section>
+    <main id="mainpelicula">
+        <h1 id="titulopelicula">FAN PAGE DE KUROKO NO BASKET</h1>
+        <section id="sectionuno">
             <article>
                 <h2>Kuroko no Basket "The Last Game"</h2>
                 
@@ -30,29 +30,29 @@
                 <p>Luego de haber derrotado a la generación de los milagros, Kagami y Kuroko se relajan viendo un partido de baloncesto con los demás miembros de Seirin. Un equipo estado unidense estaba levantando gran revuelo en la prensa al venir a Japón para jugar un partido de baloncesto callejero contra un equipo japonés compuesto por algunos jugadores que destacaron en la copa de invierno. El conflicto se origina cuando el equipo estado unidense comandado por Nash Gold Jr. empieza a burlarse de sus contrincantes en la cancha con jugadas espectaculares que dejaban en ridículo al equipo nipón. Luego de derrotar a dicho equipo, Nash Gold Jr. declara que todos los jugadores de Japón son monos que no deberían jugar baloncesto. Enfurecidos por tales palabras, la generación de los milagros junto con Kagami y Kuroko forman un mega equipo para hacerles frente.
                     Realmente la premisa de la película es muy típica y no busca ser original, pero cumple con el cometido de ser lo que pretende ser; una película en donde podremos observar a los jugadores que en las distintas temporadas de Kuroko no Basquet eran tachados como monstruos de la cancha contra otros que también son monstruos. Para la fortuna del espectador la película no se inventa cosas para alargar el contenido y va directo al grano. Los antagonistas esta vez son jugadores profesionales a diferencia de los que se habían enfrentado los del grupo de Kuroko, por ende, tienen que idear estrategias distintas contra cada uno de ellos, aunque como esto es Kuroko no Basquet las jugadas durante el partido no pueden evitar perder la cabeza.</p>
         </section>
-        <section>
-            <article>
+        <section id="sectiondos">
+            <article id="videopelicula">
                 <p>Kuroko se reúne con la "generación de los milagros" cuando un antiguo equipo rival pierde de manera humillante frente a un grupo de baloncestistas callejeros.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/xL0sP8Eorik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
         </section>
-        <section>
-            <h2>Antagonistas</h2>
-            <article>
-                <img src="../assets/images/silver.jpg" alt="silver">
+        <section id="sectiontres">
+            <h2 id="antagonistas">Antagonistas</h2>
+            <article class="malos">
+                <img src="../assets/images/silver.jpg" alt="silver" id="silver">
                 <h3>Jason Silver</h3>
                 <p>Es un jugador estado unidense del Equipo Jabberwock, que fue a Japón para jugar un partido amistoso contra el Equipo Strky.
                     Según lo dicho por Momoi, Jason posee "El cuerpo Elegido por Dios" ya que físicamente es perfecto, sin necesidad de entrenar, tiene mas fuerza que Murasakibara, es mas veloz que Aomine y tiene mayor potencial de salto que Kagami, según lo dicho por Momoi (Aunque luego es derrotado por Murasakibara cuando se pone completamente serio, y por Aomine y Kagami al entrar en la zona) mostro estar a un nivel inclusive superior al de la generación milagrosa.
                 </p>
             </article>
-            <article>
-                <img src="../assets/images/nash.jpg" alt="nash gold jr">
+            <article class="malos">
+                <img src="../assets/images/nash.jpg" alt="nash gold jr" id="nash">
                 <h3>Nash Gold.JR.</h3>
                 <p>Es uno de los principales antagonistas en Kuroko no Basuke Extra Game. Él es un miembro del famoso equipo de baloncesto de la calle estadounidense llamado Jabberwock que van en contra de Kuroko, Kagami y la Generación de los Milagros. Él es armador del equipo y capitán. Él es apodado como el "Mago''. 
                 </p>
             </article>
         </section>
-        <aside>
+        <aside id="asidepelicula">
             <article>
                 <h3>¡Mira el anime ahora!</h3>
                 <p>¡Haz <a href="https://animeflv.video/movie/kuroko-no-basket-ng-shu-c9hoh8jj/" target="_blank">click aqui</a> para ver el anime y comenzar la aventura acompañado de kuroko y sus amigos!</p>
@@ -67,7 +67,7 @@
             </article>
         </aside>
     </main>
-    <footer>
+    <footer id="footerpelicula">
         <ul>
             <li>ver el anime</li>
             <li>discord</li>
